Add Azure savings to project list
